--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -11,7 +11,7 @@
                     height="440"
                     style="border:0"
                     loading="lazy"
-                    th:src="${knownCity.getMapSource()}">"
+                    th:src="${knownCityMap}">"
                 </iframe>
             </div>
             <div class="mt-10 grid place-content-center">
@@ -27,7 +27,7 @@
                     height="440"
                     style="border:0"
                     loading="lazy"
-                    th:src="${unknownCity.getMapSource()}">"
+                    th:src="${unknownCityMap}">"
                 </iframe>
             </div>
             <div class="grid place-content-center">
